--- a/style.css
+++ b/style.css
@@ -3,16 +3,23 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    background-image: url("assets/background.jpeg");
 }
 nav{
     text-align: center;
-    background-color: black;
+    background-color: rgb(57,50,50);
     padding: 10px;
     font-size: 13px;
     font-family: Arial, sans-serif;
     width: 100vw;
     margin: 0;
     box-sizing: border-box;
+}
+h2{
+    color:lightgray;
+}
+span{
+    color :rgb(33, 90,41)
 }
 nav a{
     margin: 10px;
@@ -21,6 +28,21 @@ nav a{
     font-weight: bold;
      margin: 0 150px;
 }
+
+header {
+    text-align: center;
+    padding: 50px 0;
+    /*background-color: rgba(255, 255, 255, 0.8);*/
+    margin-bottom: 20px;
+    margin-top: 200px;
+}
+header h1 {
+    font-size: 36px;
+    color: white;
+    margin: 0;
+    
+}
+
 nav a:hover{
     color: grey;
 }
