--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-    background-image: url("assets/background.jpeg");
+    background-image: url(assets/background.jpeg);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
 }
 nav{
     text-align: center;
@@ -45,5 +45,46 @@ header h1 {
 
 nav a:hover{
     color: grey;
+}
+
+.about-section {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 800px;
+    border-radius: 8px;
+}
+.skillset{
+    
+    padding: 20px;
+    margin: 20px auto;
+    border-radius: 8px;
+    position: absolute;
+    bottom :0;
+    width : 100%;
+    height: 200px;
+}
+.skillset h2{
+    text-align: center;
+    color: white;
+    font-weight: bolder;
+} 
+.skillset ul {
+    list-style-type: none;
+    padding: 0;
+}
+.skillset li {
+    background-color: #f0f0f0;
+    margin: 5px 0;
+    padding: 10px;
+    border-radius: 4px;
+    display: inline-block;
+    margin-right: 25px;
+    margin-bottom: 10px;
+}
+
+.skillset li:hover{
+    background-color:green;
+    cursor: pointer;
 }
 
